# ds_based_contact_tasks

./: .rosinstall  .travis.yml  CMakeLists.txt  README.md  dependencies.rosinstall  id_ci_rsa.enc  install_dependencies.sh  package.xml  ssh_config.com
cfg/: objectGrasping_params.cfg  surfacePolishing_params.cfg
config/: optitrack_object_grasping.yaml  optitrack_surface_polishing.yaml  surface_polishing_rbf_adaptation.yaml
data_surface/: bou_data.txt  bou_libsvm_data.txt  bou_libsvm_model.txt  bou_svmgrad_model.txt  test_optitrack_4_libsvm_data.txt  test_optitrack_4_libsvm_model.txt  test_optitrack_4_svmgrad_model.txt
data_workspace/: LWR_workspace_Model_Sigma.txt  LWR_workspace_Model_Threshold.txt  LWR_workspace_Model_mu.txt  LWR_workspace_Model_prior.txt
include/: AdaptiveSurfacePolishing.h  CascadedBiquad.h  ObjectGrasping.h  RbfAdaptation.hpp  SurfaceCutting.h  SurfaceLearning.h  SurfacePolishing.h  SurfacePuncturing.h  TwoRobotsTransform.h  Workspace.h  adaptation_rbf.hpp
launch/: optitrack_object_grasping.launch  optitrack_surface_polishing.launch
src/: AdaptiveSurfacePolishing.cpp  CascadedBiquad.cpp  ObjectGrasping.cpp  RbfAdaptation.cpp  SurfaceCutting.cpp  SurfaceLearning.cpp  SurfacePolishing.cpp  SurfacePuncturing.cpp  TwoRobotsTransform.cpp  Workspace.cpp  adaptation_rbf.cpp  adaptiveSurfacePolishing_node.cpp  objectGrasping_node.cpp  surfaceCutting_node.cpp  surfaceLearning_node.cpp  surfacePolishing_node.cpp  surfacePuncturing_node.cpp  twoRobotsTransform_node.cpp
